fixing js files and login

--- a/user/profile.html
+++ b/user/profile.html
@@ -1,116 +1,106 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ICCTory - Profile</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <link rel="stylesheet" href="../css/profile.css">
-</head>
-<body>
-
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    />
+    <link rel="stylesheet" href="../css/profile.css" />
+  </head>
+  <body>
     <div class="dashboard-container">
-        <aside class="sidebar">
-            <div class="sidebar-banner">
-                <div class="logo-circle">
-                    <img src="../img/icct.jpeg" alt="ICCT Logo" class="logo-img">
+      <aside class="sidebar">
+        <div class="sidebar-banner">
+          <div class="logo-circle">
+            <img src="../img/icct.jpeg" alt="ICCT Logo" class="logo-img" />
+          </div>
+          <h1 class="brand-title">ICCTory</h1>
+        </div>
+
+        <nav class="nav-menu">
+          <a href="../index.html" class="nav-item">
+            <i class="fa-solid fa-house"></i> Home
+          </a>
+          <a href="upload.html" class="nav-item">
+            <i class="fa-solid fa-cloud-arrow-up"></i> Upload
+          </a>
+          <a href="publish.html" class="nav-item">
+            <i class="fa-solid fa-clipboard-list"></i> Your Requests
+          </a>
+          <a href="research.html" class="nav-item">
+            <i class="fa-solid fa-file-lines"></i> Research Papers
+          </a>
+          <a href="about.html" class="nav-item">
+            <i class="fa-solid fa-circle-info"></i> About
+          </a>
+          <a href="profile.html" class="nav-item active">
+            <i class="fa-solid fa-user"></i> Profile
+          </a>
+        </nav>
+      </aside>
+
+      <main class="main-content">
+        <div class="page-wrapper">
+          <header class="profile-header-text">
+            <h2 class="page-title">User Profile</h2>
+            <p class="subtitle">
+              Manage your account information and settings.
+            </p>
+          </header>
+
+          <div class="profile-card glass-card">
+            <div class="user-identity">
+              <div class="avatar-wrapper">
+                <div class="profile-avatar" id="avatarPreview">
+                  <i class="fas fa-user" id="defaultIcon"></i>
+                  <img src="" alt="Profile Preview" id="profileImg" />
                 </div>
-                <h1 class="brand-title">ICCTory</h1>
+                <input
+                  type="file"
+                  id="avatarInput"
+                  accept="image/*"
+                  style="display: none"
+                />
+                <button
+                  class="edit-avatar-btn"
+                  title="Change Avatar"
+                  onclick="document.getElementById('avatarInput').click()"
+                >
+                  <i class="fas fa-camera"></i>
+                </button>
+              </div>
+              <h2 class="user-display-name">Juan Dela Cruz</h2>
+              <span class="user-role-badge">Verified Student</span>
             </div>
-            
-            <nav class="nav-menu">
-                <a href="../index.html" class="nav-item">
-                    <i class="fa-solid fa-house"></i> Home
-                </a>
-                <a href="upload.html" class="nav-item">
-                    <i class="fa-solid fa-cloud-arrow-up"></i> Upload
-                </a>
-                <a href="publish.html" class="nav-item">
-                    <i class="fa-solid fa-clipboard-list"></i> Your Requests
-                </a>
-                <a href="research.html" class="nav-item">
-                    <i class="fa-solid fa-file-lines"></i> Research Papers
-                </a>
-                <a href="about.html" class="nav-item">
-                    <i class="fa-solid fa-circle-info"></i> About
-                </a>
-                <a href="profile.html" class="nav-item active">
-                    <i class="fa-solid fa-user"></i> Profile
-                </a>
-            </nav>
-        </aside>
 
-        <main class="main-content">
-            <div class="page-wrapper">
-                <header class="profile-header-text">
-                    <h2 class="page-title">User Profile</h2>
-                    <p class="subtitle">Manage your account information and settings.</p>
-                </header>
-
-                <div class="profile-card glass-card">
-                    <div class="user-identity">
-                        <div class="avatar-wrapper">
-                            <div class="profile-avatar" id="avatarPreview">
-                                <i class="fas fa-user" id="defaultIcon"></i>
-                                <img src="" alt="Profile Preview" id="profileImg">
-                            </div>
-                            <input type="file" id="avatarInput" accept="image/*" style="display: none;">
-                            <button class="edit-avatar-btn" title="Change Avatar" onclick="document.getElementById('avatarInput').click()">
-                                <i class="fas fa-camera"></i>
-                            </button>
-                        </div>
-                        <h2 class="user-display-name">Juan Dela Cruz</h2>
-                        <span class="user-role-badge">Verified Student</span>
-                    </div>
-
-                    <div class="info-grid">
-                        <div class="info-item" style="grid-column: span 2;">
-                            <label>Email Address</label>
-                            <div class="info-box">juan.delacruz@icct.edu.ph</div>
-                        </div>
-                        <div class="info-item">
-                            <label>First Name</label>
-                            <div class="info-box">Juan</div>
-                        </div>
-                        <div class="info-item">
-                            <label>Last Name</label>
-                            <div class="info-box">Dela Cruz</div>
-                        </div>
-                    </div>
-                    
-                    <div class="profile-actions-centered">
-                        <button class="logout-btn-profile" onclick="confirmLogout()">
-                            <i class="fa-solid fa-right-from-bracket"></i> Log Out
-                        </button>
-                    </div>
-                </div>
+            <div class="info-grid">
+              <div class="info-item" style="grid-column: span 2">
+                <label>Email Address</label>
+                <div class="info-box">juan.delacruz@icct.edu.ph</div>
+              </div>
+              <div class="info-item">
+                <label>First Name</label>
+                <div class="info-box">Juan</div>
+              </div>
+              <div class="info-item">
+                <label>Last Name</label>
+                <div class="info-box">Dela Cruz</div>
+              </div>
             </div>
-        </main>
+
+            <div class="profile-actions-centered">
+              <button class="logout-btn-profile" onclick="confirmLogout()">
+                <i class="fa-solid fa-right-from-bracket"></i> Log Out
+              </button>
+            </div>
+          </div>
+        </div>
+      </main>
     </div>
 
-    <script>
-        const avatarInput = document.getElementById('avatarInput');
-        const profileImg = document.getElementById('profileImg');
-        const defaultIcon = document.getElementById('defaultIcon');
-
-        avatarInput.addEventListener('change', function() {
-            const file = this.files[0];
-            if (file) {
-                const reader = new FileReader();
-                reader.onload = function(e) {
-                    profileImg.src = e.target.result;
-                    profileImg.style.display = 'block';
-                    defaultIcon.style.display = 'none';
-                }
-                reader.readAsDataURL(file);
-            }
-        });
-
-        function confirmLogout() {
-            if (confirm('Log out of ICCTory?')) {
-                window.location.href = '../login.html';
-            }
-        }
-    </script>
-</body>
+    <script src="/js/profile.js"></script>
+  </body>
 </html>
