--- a/login.html
+++ b/login.html
@@ -41,6 +41,6 @@
             </p>
         </div>
     </div>
-    <script type="module" src="/js/login.js"></script>
+    <script src="/js/login.js"></script>
 </body>
 </html>
