--- a/login.html
+++ b/login.html
@@ -47,6 +47,7 @@
         </p>
       </div>
     </div>
-    <script src="/js/firebase.js"></script>
+    <script type="module" src="/js/firebase.js"></script>
+    <script src="/js/sign-up.js"></script>
   </body>
 </html>
