--- a/signup.html
+++ b/signup.html
@@ -1,46 +1,63 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ICCTORY Sign Up</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/signup.css"> </head>
-<body>
-
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/signup.css" />
+  </head>
+  <body>
     <div class="login-card">
-        <div class="left-side">
-            <div class="logo-container">
-                <img src="img/icct.jpeg" alt="ICCT Logo">
-            </div>
-            <h1 class="brand-title">ICCTORY</h1>
+      <div class="left-side">
+        <div class="logo-container">
+          <img src="img/icct.jpeg" alt="ICCT Logo" />
         </div>
+        <h1 class="brand-title">ICCTORY</h1>
+      </div>
 
-        <div class="divider"></div>
+      <div class="divider"></div>
 
-        <div class="right-side">
-            <h2>Sign up</h2>
+      <div class="right-side">
+        <h2>Sign up</h2>
 
-            <form>
-                <div class="input-group">
-                    <input type="email" placeholder="Email Address" required>
-                    <i class="fa-solid fa-user"></i>
-                </div>
+        <form>
+          <div class="input-group">
+            <label for="email">EMAIL</label>
+            <input
+              type="email"
+              placeholder="Email Address"
+              id="email"
+              required
+            />
+            <i class="fa-solid fa-user"></i>
+          </div>
 
-                <div class="input-group">
-                    <input type="password" placeholder="Create Password" required>
-                    <i class="fa-solid fa-lock"></i>
-                </div>
+          <div class="input-group">
+            <label for="password">PASSWORD</label>
+            <input
+              type="password"
+              placeholder="Create Password"
+              id="password"
+              required
+            />
+            <i class="fa-solid fa-lock"></i>
+          </div>
 
-                <button type="submit" class="signup-btn">SIGN UP</button>
-            </form>
+          <button type="submit" class="signup-btn">SIGN UP</button>
+        </form>
 
-            <p class="footer-text">
-                Already have an account? <a href="login.html">Back to Login.</a>
-            </p>
-        </div>
+        <p class="footer-text">
+          Already have an account? <a href="login.html">Back to Login.</a>
+        </p>
+      </div>
     </div>
-
-</body>
+  </body>
 </html>
