try submit button if its working

--- a/signup.html
+++ b/signup.html
@@ -51,7 +51,7 @@
             <i class="fa-solid fa-lock"></i>
           </div>
 
-          <button type="submit" class="signup-btn">SIGN UP</button>
+          <button type="submit" class="signup-btn" id="submit">SIGN UP</button>
         </form>
 
         <p class="footer-text">
