change sign up html

--- a/signup.html
+++ b/signup.html
@@ -59,5 +59,9 @@
         </p>
       </div>
     </div>
+
+    <!-- ✅ Both scripts must be type="module" since firebase.js uses ES module exports -->
+    <script type="module" src="js/firebase.js"></script>
+    <script type="module" src="js/sign-up.js"></script>
   </body>
 </html>
