--- a/login.html
+++ b/login.html
@@ -47,7 +47,9 @@
         </p>
       </div>
     </div>
-    <script type="module" src="/js/firebase.js"></script>
-    <script src="/js/sign-up.js"></script>
+
+    <!-- ✅ Both scripts must be type="module" since firebase.js uses ES module exports -->
+    <script type="module" src="js/firebase.js"></script>
+    <script type="module" src="js/login.js"></script>
   </body>
 </html>
