--- a/signup.html
+++ b/signup.html
@@ -29,6 +29,18 @@
         <h2>Sign up</h2>
 
         <form>
+          <!-- Full Name field -->
+          <div class="input-group">
+            <label for="name">FULL NAME</label>
+            <input
+              type="text"
+              placeholder="Enter your full name"
+              id="name"
+              required
+            />
+            <i class="fa-solid fa-id-card"></i>
+          </div>
+
           <div class="input-group">
             <label for="email">EMAIL</label>
             <input
@@ -37,7 +49,7 @@
               id="email"
               required
             />
-            <i class="fa-solid fa-user"></i>
+            <i class="fa-solid fa-envelope"></i>
           </div>
 
           <div class="input-group">
@@ -60,7 +72,6 @@
       </div>
     </div>
 
-    <!-- ✅ Both scripts must be type="module" since firebase.js uses ES module exports -->
     <script type="module" src="js/firebase.js"></script>
     <script type="module" src="js/sign-up.js"></script>
   </body>
