--- a/index.html
+++ b/index.html
@@ -45,12 +45,13 @@
       <main class="main-content">
         <div class="hero-wrapper">
           <!-- ✅ Simple welcome message -->
-          <p id="user-greeting"></p>
 
           <h2 class="hero-text">
             A Centralized Repository of Verified Research Papers from ICCT
             students.
           </h2>
+
+          <h1 id="user-greeting"></h1>
 
           <div class="search-section">
             <a
