--- a/user/profile.html
+++ b/user/profile.html
@@ -56,7 +56,12 @@
               <div class="avatar-wrapper">
                 <div class="profile-avatar" id="avatarPreview">
                   <i class="fas fa-user" id="defaultIcon"></i>
-                  <img src="" alt="Profile Preview" id="profileImg" />
+                  <img
+                    src=""
+                    alt="Profile Preview"
+                    id="profileImg"
+                    style="display: none"
+                  />
                 </div>
                 <input
                   type="file"
@@ -72,26 +77,28 @@
                   <i class="fas fa-camera"></i>
                 </button>
               </div>
-              <h2 class="user-display-name">Juan Dela Cruz</h2>
+              <!-- Populated by Firebase -->
+              <h2 class="user-display-name">Loading...</h2>
               <span class="user-role-badge">Verified Student</span>
             </div>
 
             <div class="info-grid">
               <div class="info-item" style="grid-column: span 2">
                 <label>Email Address</label>
-                <div class="info-box">juan.delacruz@icct.edu.ph</div>
+                <div class="info-box">—</div>
               </div>
               <div class="info-item">
                 <label>First Name</label>
-                <div class="info-box">Juan</div>
+                <div class="info-box">—</div>
               </div>
               <div class="info-item">
                 <label>Last Name</label>
-                <div class="info-box">Dela Cruz</div>
+                <div class="info-box">—</div>
               </div>
             </div>
 
             <div class="profile-actions-centered">
+              <!-- Logout handled by profile.js -->
               <button class="logout-btn-profile" onclick="confirmLogout()">
                 <i class="fa-solid fa-right-from-bracket"></i> Log Out
               </button>
@@ -101,6 +108,7 @@
       </main>
     </div>
 
-    <script src="/js/profile.js"></script>
+    <script type="module" src="../js/firebase.js"></script>
+    <script type="module" src="../js/profile.js"></script>
   </body>
 </html>
