fixing profile logout

--- a/user/publish.html
+++ b/user/publish.html
@@ -79,5 +79,6 @@
     </div>
 
     <script src="/js/publish.js"></script>
+    <script type="module" src="./js/authGuard.js"></script>
   </body>
 </html>
