--- a/user/research.html
+++ b/user/research.html
@@ -223,5 +223,6 @@
     </div>
 
     <script src="/js/research.js"></script>
+    <script type="module" src="./js/authGuard.js"></script>
   </body>
 </html>
