--- a/user/upload.html
+++ b/user/upload.html
@@ -130,5 +130,6 @@
     </div>
 
     <script src="/js/upload.js"></script>
+    <script type="module" src="./js/authGuard.js"></script>
   </body>
 </html>
