--- a/index.html
+++ b/index.html
@@ -90,5 +90,6 @@
 
     <script type="module" src="js/firebase.js"></script>
     <script type="module" src="js/index.js"></script>
+    <script type="module" src="./js/authGuard.js"></script>
   </body>
 </html>
