--- a/user/pending.html
+++ b/user/pending.html
@@ -79,5 +79,6 @@
     </div>
 
     <script src="/js/pending.js"></script>
+    <script type="module" src="./js/authGuard.js"></script>
   </body>
 </html>
